--- a/style/SCSS/_priching.scss
+++ b/style/SCSS/_priching.scss
@@ -15,6 +15,45 @@
         width: 50%;
         padding-bottom: 238px;
     }
+    .effect { 
+        /*index已有建立此CSS動畫，但是是歸放在main裡所以這邊作用不到，這邊是歸在priching-main裡，所以要再寫一次。下次可以新增共用動畫的CSS檔*/
+        overflow: hidden; //固定住，讓img不跑出框
+        .move-1 {
+            position: relative;
+            animation-name: img-move;
+            animation-duration: 3s;
+            animation-delay: .8s;
+            animation-iteration-count: infinite;
+        }
+        .move-2 {
+            position: relative;
+            animation-name: img-move;
+            animation-duration: 3s;
+            animation-delay: .5s;
+            animation-iteration-count: infinite;
+        }
+        .move-3 {
+            position: relative;
+            animation-name: img-move;
+            animation-duration: 3s;
+            animation-delay: .2s;
+            animation-iteration-count: infinite;
+        }
+        @keyframes img-move {
+            0% {
+                top: 180px;
+            }
+            30% {
+                top: 0;
+            }
+            80% {
+                top: 0;
+            }
+            100% {
+                top: -180px;
+            }
+        }
+    }
 }
 
 //3-price
